--- a/TatBlog.WebApp/Views/Shared/_SideBar.cshtml
+++ b/TatBlog.WebApp/Views/Shared/_SideBar.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿<div class="my-4">
+    <partial name="_SearchForm" />
 
-   
+    @await Component.InvokeAsync("CategoriesWidget")
 
     @*Form tim kiem*@
     <h1>
@@ -22,3 +23,4 @@
     <h1>
         Tag cloud
     </h1>
+</div>
