--- a/TatBlog.WebApp/Views/Blog/Index.cshtml
+++ b/TatBlog.WebApp/Views/Blog/Index.cshtml
@@ -15,17 +15,9 @@
         </h3>
     }
 
-    @foreach (var PostItem in Model)
+    @foreach (var postItem in Model)
     {
-        <partial name="_PostItem" model="postItem" />
+        <partial name="_PostItem" model="postItem"/>
     }
     <partial name="_Pager" model="@Model" />
 </div>
-
-<h1>
-    Đây là trang chủ
-</h1>
-
-<p>
-    Bây giờ là : @ViewBag.CurrentTime
-</p>
