--- a/TatBlog.WebApp/Areas/Admin/Views/Authors/Index.cshtml
+++ b/TatBlog.WebApp/Areas/Admin/Views/Authors/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@{
+﻿
+@{
     ViewData["PageTitle"] = "Bảng điều khiển";
 }
 
 <h1>
-    Danh sách tác giả
+    Đây là khu vực dành cho người quản trị
 </h1>
