--- a/TatBlog.WebApp/Areas/Admin/Views/Posts/Index.cshtml
+++ b/TatBlog.WebApp/Areas/Admin/Views/Posts/Index.cshtml
@@ -51,10 +51,9 @@
             }
         </tbody>
     </table>
-}
-else
+} else
 {
-    <h1 class="text-danger">
-        Không tìm thấy bài viết nào
-    </h1>
+<h1 class="text-danger">
+    Không tìm thấy bài viết nào
+</h1>
 }
